--- a/user-web/src/main/webapp/WEB-INF/web.xml
+++ b/user-web/src/main/webapp/WEB-INF/web.xml
@@ -14,9 +14,9 @@
     <!--<listener>
         <listener-class>org.jonathan.user.web.listener.ComponentContextInitializerListener</listener-class>
     </listener>-->
-   <!-- <listener>
-        <listener-class>org.jonathan.user.web.listener.TestingListener</listener-class>
-    </listener>-->
+    <!-- <listener>
+         <listener-class>org.jonathan.user.web.listener.TestingListener</listener-class>
+     </listener>-->
     <servlet>
         <servlet-name>default</servlet-name>
         <servlet-class>org.apache.catalina.servlets.DefaultServlet</servlet-class>
@@ -62,6 +62,8 @@
         <servlet-name>jolokia-agent</servlet-name>
         <url-pattern>/jolokia/*</url-pattern>
     </servlet-mapping>
+
+    <!-- 自定义实现 -->
     <filter>
         <filter-name>CharsetEncodingFilter</filter-name>
         <filter-class>org.jonathan.user.web.filter.CharsetEncodingFilter</filter-class>
@@ -81,6 +83,21 @@
         <dispatcher>ERROR</dispatcher>
     </filter-mapping>
 
+    <!-- tomcat实现 -->
+    <filter>
+        <filter-name>SetCharacterEncodingFilter</filter-name>
+        <filter-class>org.apache.catalina.filters.SetCharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>SetCharacterEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+    </filter-mapping>
 
     <jsp-config>
         <jsp-property-group>
@@ -106,24 +123,24 @@
         <welcome-file>/index.jsp</welcome-file>
     </welcome-file-list>
 
-<!--    <resource-ref>-->
-<!--        <description>DB Connection</description>-->
-<!--        &lt;!&ndash; JNDI javax.naming.Name &ndash;&gt;-->
-<!--        <res-ref-name>jdbc/UserPlatformDB</res-ref-name>-->
-<!--        <res-type>javax.sql.DataSource</res-type>-->
-<!--        <res-auth>Container</res-auth>-->
-<!--    </resource-ref>-->
+    <!--    <resource-ref>-->
+    <!--        <description>DB Connection</description>-->
+    <!--        &lt;!&ndash; JNDI javax.naming.Name &ndash;&gt;-->
+    <!--        <res-ref-name>jdbc/UserPlatformDB</res-ref-name>-->
+    <!--        <res-type>javax.sql.DataSource</res-type>-->
+    <!--        <res-auth>Container</res-auth>-->
+    <!--    </resource-ref>-->
 
-<!--    <resource-env-ref>-->
-<!--        <description>-->
-<!--            Object factory for DBConnectionManager instances.-->
-<!--        </description>-->
-<!--        <resource-env-ref-name>-->
-<!--            bean/DBConnectionManager-->
-<!--        </resource-env-ref-name>-->
-<!--        <resource-env-ref-type>-->
-<!--            org.jonathan.user.sql.DBConnectionManager-->
-<!--        </resource-env-ref-type>-->
-<!--    </resource-env-ref>-->
+    <!--    <resource-env-ref>-->
+    <!--        <description>-->
+    <!--            Object factory for DBConnectionManager instances.-->
+    <!--        </description>-->
+    <!--        <resource-env-ref-name>-->
+    <!--            bean/DBConnectionManager-->
+    <!--        </resource-env-ref-name>-->
+    <!--        <resource-env-ref-type>-->
+    <!--            org.jonathan.user.sql.DBConnectionManager-->
+    <!--        </resource-env-ref-type>-->
+    <!--    </resource-env-ref>-->
 
 </web-app>
